--- a/app/package.json
+++ b/app/package.json
@@ -5,13 +5,16 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
+    "migrate": "node-pg-migrate --config-file ./config/default.json",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "config": "^3.3.1",
     "express": "^4.17.1",
-    "mongodb": "^3.5.9",
+    "mongoose": "^5.9.25",
+    "node-pg-migrate": "^5.3.0",
     "pg": "^8.3.0"
   }
 }
