--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,20 +1,29 @@
 # Use a lighter version of Node as a parent image
-FROM node:8
+FROM node:12
 
-# Set the working directory to /server
-WORKDIR /server
+# Set the working directory to /app
+WORKDIR /app
 
-# copy package.json into the container at /server
-COPY package*.json /server/
+# copy package.json into the container at /app
+COPY package*.json /app/
 
 # install dependencies
 RUN npm install
 
-# Copy the current directory contents into the container at /server
-COPY . /server/
+# Copy the current directory contents into the container at /app
+COPY . /app/
 
-# Make port 8000 available to the world outside this container
-EXPOSE 8000
+# Make port 3000 available to the world outside this container
+EXPOSE 3000
+
+# Copy the script for waiting database container
+COPY ./scripts/wait-for-it.sh /wait-for-it.sh
+
+# Make the script executable
+RUN chmod +x /wait-for-it.sh
+
+# Run the migration
+CMD ["npm", "run", "migrate", "up"]
 
 # Run the app when the container launches
 CMD ["npm", "start"]
