--- a/app/package.json
+++ b/app/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
+    "dev": "nodemon index.js",
     "migrate": "node-pg-migrate --config-file ./config/default.json",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -16,5 +17,8 @@
     "mongoose": "^5.9.25",
     "node-pg-migrate": "^5.3.0",
     "pg": "^8.3.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4"
   }
 }
