--- a/app/package.json
+++ b/app/package.json
@@ -17,7 +17,8 @@
     "express": "^4.17.1",
     "mongoose": "^5.9.25",
     "node-pg-migrate": "^5.3.0",
-    "pg": "^8.3.0"
+    "pg": "^8.3.0",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
