--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,7 +33,8 @@ services:
     ports:
       - 27017:27017
     volumes:
-      - db-data:/var/lib/mongo/data
+      - "db-data:/var/lib/mongo/data"
+      - "$PWD/mongo-entrypoint/:/docker-entrypoint-initdb.d/"
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: root
